Add link to github page and media query

--- a/Style.css
+++ b/Style.css
@@ -8,3 +8,5 @@ nav {
   justify-content: flex-end;
   background: deepskyblue;
 }
+
+@media all and (max-width: 800px) { #navbar { justify-content: space-around; } .tiles { grid-template-columns: 1fr 1fr; } } @media all and (max-width: 600px) { #navbar { flex-flow: column wrap; padding: 0; } #navbar a { text-align: center; padding: 10px; border-top: 1px solid rgba(255, 255, 255, 0.3); border-bottom: 1px solid rgba(0, 0, 0, 0.1); } #navbar a:last-of-type { border-bottom: none; } .tiles { grid-template-columns: 1fr; } } 
