--- a/Style.css
+++ b/Style.css
@@ -14,6 +14,12 @@ img {
     height: 250px;
 }
 
+.project-title{
+  width: 400px;
+  display:inline-block;
+
+}
+
 @media all and (max-width: 800px)
 { #navbar { justify-content: space-around; }
 .tiles { grid-template-columns: 1fr 1fr; } }
